fix scrolling on iOS

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -301,6 +301,7 @@ img {
 .panel__body {
   padding: 1rem 0;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 
